EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==9/30/2008
Derision: Task activities with an activitytype of <= 0 in the activities table will be sent with an activitytype of 9 to the client.
Derision: The reward field in the task table will now be displayed even if rewardid=0
cavedude00: (Rocker8956) Added quest function to get average group/raid level.
cavedude00: (Rocker8956) Changes to setinstflagmanually to allow deletion of instance flags and to allow manual flagging of raids, groups, and individuals.

==9/29/2008
cavedude00: Added rule World:ClearTempMerchantlist to control whether world clears temp merchant items when started or not.
AndMetal: (Congdar) New Double Attack logic
Angelox: Keyring code fix, so clicky portals that require keys will work too.
AndMetal: Added AAs: Discordant Defiance, Blacksmithing Mastery, Baking Mastery, Brewing Mastery, Fletching Mastery, Pottery Mastery, Tailoring Mastery, Packrat, Expansive Mind, Veteran's Wrath, Advanced Fury of Magic Mastery, Destructive Fury
AndMetal: Ayonae's Tutelage should now calculate bonus for Singing

Optional SQL:
insert into rule_values values (0,'World:ClearTempMerchantlist','true');

==9/28/2008
AndMetal: Fixed exploit for pets ignoring Fear by using /pet commands
AndMetal: #wp add will now use the highest value in the grid_entries table + 1 if you don't use a Waypoint # or use 0

==09/26/2008
cavedude00: (AndMetal) Deathblow AA
cavedude00: (AndMetal) Swift Journey AA
cavedude00: (AndMetal) Convalescence and Healthy Aura AAs
cavedude00: (AndMetal) Slippery Attacks AA
cavedude00: (trevius) Additional IP limiting rules
cavedude00: (Congdar) Further PC main and second hand attack fixes
cavedude00: (Derision) Fix for percent heals
cavedude00: (Theeper) Fix for quest:itemlink() 
cavedude00: (Rocker8956) More work on zone instancing

Optional SQL:
Insert into rule_values values (0, 'World:AddMaxClientsPerIP', -1 );