@@ -61,7 +61,9 @@ typedef const char Const_char;	//for perl XS
 
 #ifdef WIN32
 	#define snprintf	_snprintf
+#if (_MSC_VER < 1500)
 	#define vsnprintf	_vsnprintf
+#endif
 	#define strncasecmp	_strnicmp
 	#define strcasecmp  _stricmp
 	typedef void ThreadReturnType;
