@@ -31,7 +31,9 @@ using namespace std;
 	#include <winsock.h>
 
 	#define snprintf	_snprintf
+#if (_MSC_VER < 1500)
 	#define vsnprintf	_vsnprintf
+#endif
 	#define strncasecmp	_strnicmp
 	#define strcasecmp	_stricmp
 #else // Pyro: fix for linux
