@@ -32,7 +32,9 @@
 	#include <windows.h>
 	#include <winsock.h>
 	#define snprintf	_snprintf
+#if (_MSC_VER < 1500)
 	#define vsnprintf	_vsnprintf
+#endif
 	#define strncasecmp	_strnicmp
 	#define strcasecmp  _stricmp
 #else
