@@ -36,7 +36,9 @@ using namespace std;
 #ifdef WIN32
 #include <conio.h>
 #define snprintf	_snprintf
-#define vsnprintf	_vsnprintf
+#if (_MSC_VER < 1500)
+	#define vsnprintf	_vsnprintf
+#endif
 #define strncasecmp	_strnicmp
 #define strcasecmp  _stricmp
 #endif
