@@ -29,7 +29,9 @@ Copyright (C) 2001-2002  EQEMu Development Team (http://eqemu.org)
 
 #ifdef WIN32
 #define snprintf	_snprintf
-#define vsnprintf	_vsnprintf
+#if (_MSC_VER < 1500)
+	#define vsnprintf	_vsnprintf
+#endif
 #define strncasecmp	_strnicmp
 #define strcasecmp	_stricmp
 #endif
